We've known each other for so long